Use generic PUT to update ExtractorInfo, don't add a new API call
