# app/controllers/Application.scala
@@ -489,7 +489,8 @@ class Application @Inject() (files: FileService, collections: CollectionService,
         api.routes.javascript.Extractions.submitDatasetToExtractor,
         api.routes.javascript.Extractions.cancelFileExtractionSubmission,
         api.routes.javascript.Extractions.cancelDatasetExtractionSubmission,
-        api.routes.javascript.Extractions.changeMaturity,
+        api.routes.javascript.Extractions.addExtractorInfo,
+        api.routes.javascript.Extractions.getExtractorInfo,
         api.routes.javascript.Extractions.deleteExtractor,
         api.routes.javascript.Folders.createFolder,
         api.routes.javascript.Folders.deleteFolder,
