# public/swagger.yml
@@ -4315,31 +4315,6 @@ paths:
           description: Not found
           content: {}
 
-  /extractors/{name}/maturity/{maturity}:
-    put:
-      tags:
-        - extractions
-      summary: Updates the maturity of a specific extractor
-      description: Extractions for Files.
-      parameters:
-        - name: name
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: maturity
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        200:
-          description: OK
-          content: {}
-        404:
-          description: Not found
-          content: {}
-
   /extractions/{id}/status:
     get:
       tags:
